# Telegram-Voice-Transcriber

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  PROJEKTDOKUMENTATION.md  README.md  SECURITY.md  index.html  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
docs/: launch-traction.md
docs/releases/: v1.0.0.md
