[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-voice-transcriber"
version = "0.1.0"
description = "Export and transcribe Telegram messages into Markdown."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "telethon>=1.43.0",
    "faster-whisper>=1.2.1",
    "tqdm>=4.67.3",
    "python-dateutil>=2.9.0.post0",
    "tzlocal>=5.3.1",
    "rich>=15.0.0",
    "typer>=0.24.1",
    "streamlit>=1.56.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.5",
    "freezegun>=1.5.1",
]

[project.scripts]
tg-transcribe = "telegram_voice_transcriber.cli:main"
tg-web = "telegram_voice_transcriber.web:run"

[tool.setuptools.packages.find]
include = ["telegram_voice_transcriber*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
