[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-voice-transcriber"
version = "0.1.0"
description = "Export and transcribe Telegram messages into Markdown."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "telethon>=1.34.0",
    "faster-whisper>=1.0.0",
    "tqdm>=4.66.0",
    "python-dateutil>=2.8.2",
    "tzlocal>=5.2",
    "rich>=13.7.0",
    "typer>=0.12.3",
    "streamlit>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.3.0",
    "freezegun>=1.5.5",
]

[project.scripts]
tg-transcribe = "telegram_voice_transcriber.cli:main"
tg-web = "telegram_voice_transcriber.web:run"

[tool.setuptools.packages.find]
include = ["telegram_voice_transcriber*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
